<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Full Time Recorder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_audio_list">AudioList</string>
    <string name="title_activity_play_audio">PlayAudio</string>
    <string name="title_activity_map_view">MapView</string>
    <string name="title_activity_about">About</string>
    
    <string name="monitor_on">On Audio Monitor</string>
	<string name="grabacion_activa">Audio recording active</string>
	<string name="grabaciones">Audio files</string>
	<string name="iniciar_grabadora">Start Recorder</string>
	<string name="actualizar_lista">Update List</string>
	<string name="segundos">Seconds</string>
	<string name="prescindible">Needless</string>
	<string name="importante">Important</string>
	<string name="ver_grabaciones">List Records</string>
	<string name="ver_mapa">See Map</string>
	<string name="configuracion">Settings</string>
	<string name="acercade">About...</string>
	<string name="bajo">Low</string>
	<string name="normal">Normal</string>
	<string name="alto">High</string>
	<string name="un_dia">1 day</string>
	<string name="tres_dias">3 days</string>
	<string name="siete_dias">7 days</string>
	<string name="ajuste_el_nivel">Set minimun sound level for save audiofiles</string>
	<string name="ajuste_el_tiempo">Set maximun time for the not maked files as Important will be deleted</string>
	<string name="tiempo_autolimpieza">Autoclean time</string>
	<string name="nivel_sonido">Sound level</string>
	<string name="introduzca_comentario">Comment this file</string>
	<string name="nada_grabado">No audio files, any data to show</string>
	<string name="imposible_averiguar">Unable to find address</string>
</resources>
