<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_list_item" >

    <TextView
        android:id="@+id/tTittleAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="Calle Guadalquivir, 6"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text04"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tTittleAddress"
        android:layout_below="@id/tTittleAddress"
        android:text="16:55"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text03"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tHour"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/tHour"
        android:text="15 de Noviembre de 2013"
        android:textColor="@color/text02" />

    <TextView
        android:id="@+id/tFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tTittleAddress"
        android:layout_below="@+id/tHour"
        android:text="66"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text03"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tLabelFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tFiles"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tFiles"
        android:text="@string/grabaciones"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text02" />

    <TextView
        android:id="@+id/tCompleteAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tTittleAddress"
        android:layout_below="@id/tFiles"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="Calle Guadalquivir, 6 | 11406 Jerez de la frontera | Cádiz Andalucia | España Europa"
        android:textColor="@color/text01"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tCompleteAddress"
        android:layout_marginTop="5dp" >

        <LinearLayout
            android:id="@+id/lyVerGrabaciones"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_item"
            android:gravity="center"
            android:onClick="onClickVerGrabaciones"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ImgVerLista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_slideshow" />

            <TextView
                android:id="@+id/tLabelSegundosAudioGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_grabaciones" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyVerMapa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_item"
            android:gravity="center"
            android:onClick="onClickVerMapa"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgVerMapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_mapmode" />

            <TextView
                android:id="@+id/tVerMapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_mapa" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>